--- a/style.css
+++ b/style.css
@@ -1,22 +1,16 @@
 body {
     background-color: rgb(59, 59, 59);
-    background-image: url'images/baguette.png');
-
 }
 
-
-.img_baguette {
+header {
+    background-image: url('images/baguette.png'); 
     background-size: cover;
-}
-
-.first_img {
-    
-    background-size: cover;
+    background-attachment:fixed;
     width: 100%;
     height: 1000px;
 }
 
-.rectangle{
+.rectangle {
 	width:900px;
 	height:600px;
     background:rgb(255, 255, 255);
@@ -27,25 +21,3 @@ body {
     
     opacity: 0.33;
 }
-
-/* gallery photo */
-
-div.gallery {
-    margin: 5px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 180px;
-  }
-  
-  div.gallery:hover {
-    border: 1px solid #777;
-  }
-  
-  div.gallery img {
-    width: 100%;
-    height: auto;
-  }
-  
-  div.desc {
-    padding: 15px;
-    text-align: center;
