--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(59, 59, 59);
+    background-color: #343a40;
 }
 
 header {
@@ -10,14 +10,15 @@ header {
     height: 1000px;
 }
 
-.rectangle {
-	width:900px;
-	height:600px;
-    background:rgb(255, 255, 255);
+
+.presentation {
+    margin-top: 15em; 
     
-    position: absolute;
-    top: 17em;
-    right: 8em;
-    
-    opacity: 0.33;
+}
+
+
+
+.gal {
+    width:50px;
+	height:50px;
 }
